reformatted package code

--- a/SEDProcessingBrown.ipynb
+++ b/SEDProcessingBrown.ipynb
@@ -12,21 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 151,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'SKIRTOR_PARAMS' from 'carf' (c:\\Users\\Titan\\OneDrive\\Documents\\GitHub\\HonoursResearchProject\\carf.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[126], line 10\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mastropy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mio\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfits\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mfits\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mcarf\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mcf\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcarf\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SKIRTOR_PARAMS\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'SKIRTOR_PARAMS' from 'carf' (c:\\Users\\Titan\\OneDrive\\Documents\\GitHub\\HonoursResearchProject\\carf.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import all of the relevant libraries\n",
     "import matplotlib.pyplot as plt\n",
@@ -37,12 +25,12 @@
     "from astLib import astSED\n",
     "import astropy.io.fits as fits\n",
     "import carf as cf\n",
-    "from carf import SKIRTOR_PARAMS\n"
+    "from carf import *\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,18 +421,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'carf' has no attribute 'SKIRTOR_PARAMS'",
+     "ename": "NameError",
+     "evalue": "name 'TAU' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[129], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# use the functions from the carf package\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# params\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m#cf.read_skirtor_model()\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m cf\u001b[38;5;241m.\u001b[39mSKIRTOR_PARAMS\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'carf' has no attribute 'SKIRTOR_PARAMS'"
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[152], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# use the functions from the carf package\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# params\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m#cf.read_skirtor_model()\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m TAU\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'TAU' is not defined"
      ]
     }
    ],
@@ -453,7 +441,7 @@
     "\n",
     "# params\n",
     "#cf.read_skirtor_model()\n",
-    "cf.SKIRTOR_PARAMS"
+    "TAU"
    ]
   },
   {
