Updated code with more reading and plotting functions
fixed errors and added more functions to helper module code

--- a/SEDProcessingBrown.ipynb
+++ b/SEDProcessingBrown.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,72 +24,160 @@
     "import os\n",
     "from astLib import astSED\n",
     "import astropy.io.fits as fits\n",
-    "from carf import *\n"
+    "from carf import * # custom module for functions relating to the project\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "datasets\\Templates\\Brown\\2014\\Rest\n",
+      "['Arp_118_restframe.dat', 'Arp_256_N_restframe.dat', 'Arp_256_S_restframe.dat', 'CGCG_049-057_restframe.dat', 'CGCG_436-030_restframe.dat', 'CGCG_453-062_restframe.dat', 'Haro_06_restframe.dat', 'IC_0691_restframe.dat', 'IC_0860_restframe.dat', 'IC_0883_restframe.dat', 'IC_4051_restframe.dat', 'IC_4553_restframe.dat', 'IC_5298_restframe.dat', 'III_Zw_035_restframe.dat', 'II_Zw_096_restframe.dat', 'IRAS_08572+3915_restframe.dat', 'IRAS_17208-0014_restframe.dat', 'Mrk_0331_restframe.dat', 'Mrk_0475_restframe.dat', 'Mrk_0930_restframe.dat', 'Mrk_1450_restframe.dat', 'Mrk_1490_restframe.dat', 'Mrk_33_restframe.dat', 'NGC_0337_restframe.dat', 'NGC_0474_restframe.dat', 'NGC_0520_restframe.dat', 'NGC_0584_restframe.dat', 'NGC_0628_restframe.dat', 'NGC_0660_restframe.dat', 'NGC_0695_restframe.dat', 'NGC_0750_restframe.dat', 'NGC_0855_restframe.dat', 'NGC_1068_restframe.dat', 'NGC_1144_restframe.dat', 'NGC_1275_restframe.dat', 'NGC_1614_restframe.dat', 'NGC_2388_restframe.dat', 'NGC_2403_restframe.dat', 'NGC_2537_restframe.dat', 'NGC_2623_restframe.dat', 'NGC_2798_restframe.dat', 'NGC_3049_restframe.dat', 'NGC_3079_restframe.dat', 'NGC_3190_restframe.dat', 'NGC_3198_restframe.dat', 'NGC_3265_restframe.dat', 'NGC_3310_restframe.dat', 'NGC_3351_restframe.dat', 'NGC_3521_restframe.dat', 'NGC_3627_restframe.dat', 'NGC_3690_restframe.dat', 'NGC_3773_restframe.dat', 'NGC_3870_restframe.dat', 'NGC_3938_restframe.dat', 'NGC_4088_restframe.dat', 'NGC_4125_restframe.dat', 'NGC_4138_restframe.dat', 'NGC_4168_restframe.dat', 'NGC_4194_restframe.dat', 'NGC_4254_restframe.dat', 'NGC_4321_restframe.dat', 'NGC_4365_restframe.dat', 'NGC_4385_restframe.dat', 'NGC_4387_restframe.dat', 'NGC_4450_restframe.dat', 'NGC_4458_restframe.dat', 'NGC_4473_restframe.dat', 'NGC_4486_restframe.dat', 'NGC_4536_restframe.dat', 'NGC_4550_restframe.dat', 'NGC_4551_restframe.dat', 'NGC_4552_restframe.dat', 'NGC_4559_restframe.dat', 'NGC_4569_restframe.dat', 'NGC_4579_restframe.dat', 'NGC_4594_restframe.dat', 'NGC_4621_restframe.dat', 'NGC_4625_restframe.dat', 'NGC_4631_restframe.dat', 'NGC_4660_restframe.dat', 'NGC_4670_restframe.dat', 'NGC_4676_A_restframe.dat', 'NGC_4725_restframe.dat', 'NGC_4826_restframe.dat', 'NGC_4860_restframe.dat', 'NGC_4889_restframe.dat', 'NGC_4926_restframe.dat', 'NGC_5033_restframe.dat', 'NGC_5055_restframe.dat', 'NGC_5104_restframe.dat', 'NGC_5194_restframe.dat', 'NGC_5195_restframe.dat', 'NGC_5256_restframe.dat', 'NGC_5257_restframe.dat', 'NGC_5258_restframe.dat', 'NGC_5653_restframe.dat', 'NGC_5713_restframe.dat', 'NGC_5866_restframe.dat', 'NGC_5953_restframe.dat', 'NGC_5992_restframe.dat', 'NGC_6052_restframe.dat', 'NGC_6090_restframe.dat', 'NGC_6240_restframe.dat', 'NGC_7331_restframe.dat', 'NGC_7585_restframe.dat', 'NGC_7591_restframe.dat', 'NGC_7592_restframe.dat', 'NGC_7673_restframe.dat', 'NGC_7674_restframe.dat', 'NGC_7679_restframe.dat', 'NGC_7714_restframe.dat', 'NGC_7771_restframe.dat', 'UGCA_166_restframe.dat', 'UGCA_208_restframe.dat', 'UGCA_219_restframe.dat', 'UGCA_410_restframe.dat', 'UGC_04881_restframe.dat', 'UGC_05101_restframe.dat', 'UGC_06665_restframe.dat', 'UGC_06850_restframe.dat', 'UGC_08335_NW_restframe.dat', 'UGC_08335_SE_restframe.dat', 'UGC_08696_restframe.dat', 'UGC_09618_N_restframe.dat', 'UGC_09618_restframe.dat', 'UGC_09618_S_restframe.dat', 'UGC_12150_restframe.dat', 'UM_461_restframe.dat']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>102.01</td>\n",
+       "      <td>6.782756e+11</td>\n",
+       "      <td>1.625613e-07</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>103.91</td>\n",
+       "      <td>9.235722e+11</td>\n",
+       "      <td>2.133303e-07</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>106.08</td>\n",
+       "      <td>1.280614e+12</td>\n",
+       "      <td>2.838230e-07</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>108.06</td>\n",
+       "      <td>1.804792e+12</td>\n",
+       "      <td>3.854727e-07</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>110.06</td>\n",
+       "      <td>2.827791e+12</td>\n",
+       "      <td>5.822169e-07</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2277</th>\n",
+       "      <td>332163.75</td>\n",
+       "      <td>2.604806e+24</td>\n",
+       "      <td>5.887993e-02</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2278</th>\n",
+       "      <td>333944.03</td>\n",
+       "      <td>3.497316e+24</td>\n",
+       "      <td>7.821389e-02</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2279</th>\n",
+       "      <td>335725.44</td>\n",
+       "      <td>3.498347e+24</td>\n",
+       "      <td>7.740889e-02</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2280</th>\n",
+       "      <td>337507.72</td>\n",
+       "      <td>2.625419e+24</td>\n",
+       "      <td>5.748144e-02</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2281</th>\n",
+       "      <td>339291.19</td>\n",
+       "      <td>2.644810e+24</td>\n",
+       "      <td>5.729883e-02</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2282 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              0             1             2    3\n",
+       "0        102.01  6.782756e+11  1.625613e-07  0.0\n",
+       "1        103.91  9.235722e+11  2.133303e-07  0.0\n",
+       "2        106.08  1.280614e+12  2.838230e-07  0.0\n",
+       "3        108.06  1.804792e+12  3.854727e-07  0.0\n",
+       "4        110.06  2.827791e+12  5.822169e-07  0.0\n",
+       "...         ...           ...           ...  ...\n",
+       "2277  332163.75  2.604806e+24  5.887993e-02  3.0\n",
+       "2278  333944.03  3.497316e+24  7.821389e-02  3.0\n",
+       "2279  335725.44  3.498347e+24  7.740889e-02  3.0\n",
+       "2280  337507.72  2.625419e+24  5.748144e-02  3.0\n",
+       "2281  339291.19  2.644810e+24  5.729883e-02  3.0\n",
+       "\n",
+       "[2282 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# In this code we are aiming to investigate brown's templates, to do this we devise a code to read \n",
-    "# in all of the templates into the workspace and then plot them to see what they look like.\n",
-    "# as they are galaxies names we will have to read in the names in the folder as an array\n",
-    "# then we will have to read in the fits files and plot them.\n",
-    "\n",
-    "# First we will read in the names of the files in the folder\n",
-    "# This is done using the os library\n",
-    "\n",
-    "\n",
-    "# Create a function to read in brown's templates\n",
-    "\n",
-    "\n",
-    "def read_brown_templates():\n",
-    "    df_list = []\n",
-    "    objname_list = []\n",
-    "    folder_path = os.path.join('datasets', 'Templates','Brown', '2014','Rest')\n",
-    "    files_in_folder = os.listdir(folder_path)\n",
-    "    for file in files_in_folder:\n",
-    "        # Find filepath\n",
-    "        objname = file.split('_restframe.dat')[0]\n",
-    "        filepath = os.path.join(folder_path, file)\n",
-    "        data = np.loadtxt(filepath)\n",
-    "        #convert to dataframe \n",
-    "        df = pd.DataFrame(data)\n",
-    "        \n",
-    "        # our wavelength is in microns, convert to Angstroms\n",
-    "        df[0] = df[0] * 10000 # microns 10^-6 -> Angstroms 10^-10 \n",
-    "        \n",
-    "        \n",
-    "        df_list.append(df)\n",
-    "        objname_list.append(objname)\n",
-    "    return df_list, objname_list\n",
-    "\n",
-    "\n",
-    "# Create a function to plot a random galaxy from brown's templates, must be used with \n",
-    "def plot_galaxy(df_list, objname_list, n, israndom = True):\n",
-    "    if israndom:\n",
-    "        n =np.random.randint(0, 128)\n",
-    "    \n",
-    "\n",
-    "    # plot a single galaxy\n",
-    "    df = df_list[n]\n",
-    "    obj_name = objname_list[n]\n",
-    "    \n",
-    "    plt.figure(figsize=(10, 5))\n",
-    "    plt.plot(df[0], df[2])\n",
-    "    plt.xlabel('Wavelength (Angstroms)')\n",
-    "    plt.ylabel('Flux (erg/s/cm^2/Angstrom)')\n",
-    "    plt.title('Galaxy Template of: '+str(obj_name))\n",
-    "    plt.grid()\n",
-    "    plt.xscale('log')\n",
-    "    #plt.xlim([6500, 6750])\n",
-    "    plt.show()\n",
-    "    \n",
-    "    \n",
-    "\n",
-    "    "
+    "# Begin by reading in the Brown template\n",
+    "brown_folderpath = os.path.join('datasets', 'Templates', 'Brown', '2014','Rest')\n",
+    "print(brown_folderpath)\n",
+    "df_list, objname_list = read_brown_galaxy_templates(brown_folderpath)\n",
+    "df_list[0]"
    ]
   },
   {
@@ -98,27 +186,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_list, objname_list = read_brown_templates()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Run the plotting code 20 times\n",
-    "num_plots = 127 # must be less than 128\n",
-    "#for i in range(num_plots):\n",
-    "    \n",
-    "    #plot_galaxy(df_list, objname_list, i, israndom = True)\n",
-    "    \n",
-    "    \n",
-    " # plot the galaxies\n",
-    " \n",
-    "\n",
-    "\n",
-    "\n"
+    "# Check that we have the associated list of templates, and names\n",
+    "#print(df_list)"
    ]
   },
   {
@@ -131,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +348,7 @@
        "[2282 rows x 4 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +374,7 @@
     "colour_list = []\n",
     "uv_list = []\n",
     "vj_list = []\n",
-    "for n in range(num_plots):\n",
+    "for n in range(127):\n",
     "    \n",
     "    # use the wavelength and flux of the sed\n",
     "    wl = df_list[n][0] \n",
@@ -330,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,38 +475,18 @@
    "metadata": {},
    "source": [
     "# Creating Composite SEDs with the Skirtor Models\n",
-    "Now that we have successfully read in the templates from Brown, we aim to use these templates, combining these templates with a selection of model templates from the Skirtor project. This will allow us to theoretically see the effect of AGN on the colour space of galaxies"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "%%% Todo at uni\n",
+    "Now that we have successfully read in the templates from Brown, we aim to use these templates, combining these templates with a selection of model templates from the Skirtor project. This will allow us to theoretically see the effect of AGN on the colour space of galaxies.\n",
     "\n",
-    "To make this entire proccess easier what we will do is create a seperate python file for this project. This will contain the required functions that will be used to interface with each model, template, or do things that I need to do often. This is intended to make it easier to manipulate the data. "
+    "Now that we have imported, selected and manipulated the Brown templates, we can also look at the models from Skirtor. While we won't look at all of the models in the entire project, we will begin by reading all the models in and doing a similar UVJ plot on their SEDs "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# use the functions from the carf package\n",
-    "\n",
-    "# \n"
+    "\n"
    ]
   },
   {
