Updated composite code
Updated the composite code so it is now able to create directly compareable composites. These scale the flux by normalizing both SEDs, and then using a scaling factor so you can add them.

--- a/SEDProcessing_Test.ipynb
+++ b/SEDProcessing_Test.ipynb
@@ -1874,23 +1874,36 @@
     "# Part 1: Function to ensure that both contain the same wavelength range, and are interpolated for any missing values\n",
     "#           - This should be implemented later as we are currently working on getting the SEDs normalized\n",
     "# \n",
-    "#                   * This was implemented as adjust_wavelength_range() \n",
+    "#                   * This was implemented as adjust_wavelength_range() - also this has been applied in create_gal\n",
     "\n",
     "\n",
     "# Part 2: Normalzing and scaling the different SEDs by integrating the flux density along the entire wavelength range\n",
     "#           - This will need to be implemented here and the converted into a function that will be used in the carf package\n",
     "#\n",
-    "#                   * This will be impleneted here\n",
+    "#                   * This was implemented as normalize_flux_integral.\n",
+    "\n",
     "\n",
     "\n",
     "\n",
     "# Part 3: Design a few algorithms that can be used to create composite seds:\n",
     "#           - mixing gal/agn, and in addition to this also the adding of agn to gal components\n",
+    "#\n",
+    "#                   * This was implemented as a create_gal_agn_composite_sed\n",
+    "\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We can write a test of this procedure"
    ]
   }
  ],
