Started adding code for type2 agn
started adding code to the testing file for type2 agn composites. This has not been tested yet but has a rough outline.

--- a/SedProcessing_SWIRECompositesTest.ipynb
+++ b/SedProcessing_SWIRECompositesTest.ipynb
@@ -2909,7 +2909,7 @@
     "    plt.plot(vj_mean, uv_mean, alpha=0.5, color='black')\n",
     "    \n",
     "    # Add text to the first galaxy with no contribution of AGN, showing which SWIRE template is being used\n",
-    "    plt.text(vj_mean[0], uv_mean[0], 'Mean UVJ Position', fontsize=12)\n",
+    "    plt.text(vj_mean[0], uv_mean[0], 'Mean UVJ P', fontsize=12)\n",
     "       \n",
     "    plt.ylabel('U - V')\n",
     "    plt.xlabel('V - J')\n",
