updated id selection code
added extra into selection code

--- a/ZFourgeUVJInvestigation.ipynb
+++ b/ZFourgeUVJInvestigation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
        "Name: GalaxyType, dtype: int64"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,28 +694,259 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Extend this idea to select multiple id's from each reigon, putting them into dataframe\n",
-    "def get_uvj_ids(df, reigon, n):\n",
+    "# We should be able to run this multiple times, getting a different sample every time if needed.\n",
+    "def get_uvj_ids(df, n):\n",
     "    \"\"\"_summary_\n",
     "\n",
     "    Args:\n",
     "        df (_type_): _description_\n",
     "        reigon (_type_): _description_\n",
-    "        n (int): the number of selections in total, this will be divided up for each reigon\n",
+    "        n (int): the number of selections for each reigon\n",
     "\n",
     "\n",
     "    Returns:\n",
-    "        _type_: _description_\n",
+    "        _type_: a for each of the reigons, containing the selected ID's in each of those reigons.\n",
     "    \"\"\"\n",
+    "    star_forming_ids=[]\n",
+    "    quiescent_ids=[]\n",
+    "    dusty_ids=[]\n",
+    "    \n",
+    "    \n",
+    "    # Check to see if n is greater then the max number of the smallest array\n",
+    "    if n > min([df['GalaxyType'].value_counts()[0], df['GalaxyType'].value_counts()[1], df['GalaxyType'].value_counts()[2]]):\n",
+    "        print('n is greater than the smallest number of galaxies in a reigon')\n",
+    "        # If this is the case, we should set n to the smallest number of galaxies in a reigon\n",
+    "        n = min([df['GalaxyType'].value_counts()[0], df['GalaxyType'].value_counts()[1], df['GalaxyType'].value_counts()[2]])\n",
+    "    \n",
+    "    # n is the number of selections in reach reigon, we will select n id's from each reigon\n",
+    "    for i in range(n):\n",
+    "        # Do a check each time to see if the ID is already in the list, if it is, we should select another ID\n",
+    "        star_forming_ids.append(get_uvj_id(df, 'Star Forming'))\n",
+    "        quiescent_ids.append(get_uvj_id(df, 'Quiescent'))\n",
+    "        dusty_ids.append(get_uvj_id(df, 'Dusty'))\n",
+    "    \n",
+    "    \n",
+    "    selected_ids = pd.DataFrame({'Star-forming ID': star_forming_ids, 'Quiescent ID': quiescent_ids, 'Dusty ID': dusty_ids})\n",
     "    \n",
     "    \n",
     "    # This is where we want to make a selection on the UVJ space\n",
     "    return selected_ids"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Star-forming ID</th>\n",
+       "      <th>Quiescent ID</th>\n",
+       "      <th>Dusty ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>14175    CDFS_14124\n",
+       "Name: id, dtype: object</td>\n",
+       "      <td>28276    CDFS_28082\n",
+       "Name: id, dtype: object</td>\n",
+       "      <td>19392    CDFS_19214\n",
+       "Name: id, dtype: object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>23053    CDFS_22862\n",
+       "Name: id, dtype: object</td>\n",
+       "      <td>11596    CDFS_11581\n",
+       "Name: id, dtype: object</td>\n",
+       "      <td>23559    CDFS_23374\n",
+       "Name: id, dtype: object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>25979    CDFS_25751\n",
+       "Name: id, dtype: object</td>\n",
+       "      <td>27001    CDFS_26765\n",
+       "Name: id, dtype: object</td>\n",
+       "      <td>12918    CDFS_12883\n",
+       "Name: id, dtype: object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>15920    CDFS_15807\n",
+       "Name: id, dtype: object</td>\n",
+       "      <td>15795    CDFS_15686\n",
+       "Name: id, dtype: object</td>\n",
+       "      <td>15442    CDFS_15356\n",
+       "Name: id, dtype: object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8116    CDFS_8083\n",
+       "Name: id, dtype: object</td>\n",
+       "      <td>28082    CDFS_27903\n",
+       "Name: id, dtype: object</td>\n",
+       "      <td>23390    CDFS_23201\n",
+       "Name: id, dtype: object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>8847    CDFS_8816\n",
+       "Name: id, dtype: object</td>\n",
+       "      <td>20170    CDFS_19980\n",
+       "Name: id, dtype: object</td>\n",
+       "      <td>25180    CDFS_24978\n",
+       "Name: id, dtype: object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6388    CDFS_6378\n",
+       "Name: id, dtype: object</td>\n",
+       "      <td>28811    CDFS_28640\n",
+       "Name: id, dtype: object</td>\n",
+       "      <td>17491    CDFS_17320\n",
+       "Name: id, dtype: object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>22406    CDFS_22213\n",
+       "Name: id, dtype: object</td>\n",
+       "      <td>28539    CDFS_28354\n",
+       "Name: id, dtype: object</td>\n",
+       "      <td>14980    CDFS_14909\n",
+       "Name: id, dtype: object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>12593    CDFS_12562\n",
+       "Name: id, dtype: object</td>\n",
+       "      <td>24943    CDFS_24740\n",
+       "Name: id, dtype: object</td>\n",
+       "      <td>15976    CDFS_15858\n",
+       "Name: id, dtype: object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>20398    CDFS_20199\n",
+       "Name: id, dtype: object</td>\n",
+       "      <td>16467    CDFS_16337\n",
+       "Name: id, dtype: object</td>\n",
+       "      <td>17399    CDFS_17233\n",
+       "Name: id, dtype: object</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Star-forming ID  \\\n",
+       "0  14175    CDFS_14124\n",
+       "Name: id, dtype: object   \n",
+       "1  23053    CDFS_22862\n",
+       "Name: id, dtype: object   \n",
+       "2  25979    CDFS_25751\n",
+       "Name: id, dtype: object   \n",
+       "3  15920    CDFS_15807\n",
+       "Name: id, dtype: object   \n",
+       "4    8116    CDFS_8083\n",
+       "Name: id, dtype: object   \n",
+       "5    8847    CDFS_8816\n",
+       "Name: id, dtype: object   \n",
+       "6    6388    CDFS_6378\n",
+       "Name: id, dtype: object   \n",
+       "7  22406    CDFS_22213\n",
+       "Name: id, dtype: object   \n",
+       "8  12593    CDFS_12562\n",
+       "Name: id, dtype: object   \n",
+       "9  20398    CDFS_20199\n",
+       "Name: id, dtype: object   \n",
+       "\n",
+       "                                  Quiescent ID  \\\n",
+       "0  28276    CDFS_28082\n",
+       "Name: id, dtype: object   \n",
+       "1  11596    CDFS_11581\n",
+       "Name: id, dtype: object   \n",
+       "2  27001    CDFS_26765\n",
+       "Name: id, dtype: object   \n",
+       "3  15795    CDFS_15686\n",
+       "Name: id, dtype: object   \n",
+       "4  28082    CDFS_27903\n",
+       "Name: id, dtype: object   \n",
+       "5  20170    CDFS_19980\n",
+       "Name: id, dtype: object   \n",
+       "6  28811    CDFS_28640\n",
+       "Name: id, dtype: object   \n",
+       "7  28539    CDFS_28354\n",
+       "Name: id, dtype: object   \n",
+       "8  24943    CDFS_24740\n",
+       "Name: id, dtype: object   \n",
+       "9  16467    CDFS_16337\n",
+       "Name: id, dtype: object   \n",
+       "\n",
+       "                                      Dusty ID  \n",
+       "0  19392    CDFS_19214\n",
+       "Name: id, dtype: object  \n",
+       "1  23559    CDFS_23374\n",
+       "Name: id, dtype: object  \n",
+       "2  12918    CDFS_12883\n",
+       "Name: id, dtype: object  \n",
+       "3  15442    CDFS_15356\n",
+       "Name: id, dtype: object  \n",
+       "4  23390    CDFS_23201\n",
+       "Name: id, dtype: object  \n",
+       "5  25180    CDFS_24978\n",
+       "Name: id, dtype: object  \n",
+       "6  17491    CDFS_17320\n",
+       "Name: id, dtype: object  \n",
+       "7  14980    CDFS_14909\n",
+       "Name: id, dtype: object  \n",
+       "8  15976    CDFS_15858\n",
+       "Name: id, dtype: object  \n",
+       "9  17399    CDFS_17233\n",
+       "Name: id, dtype: object  "
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_uvj_ids(df, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
