updated code to make sure duplicates aren't added into df

--- a/ZFourgeUVJInvestigation.ipynb
+++ b/ZFourgeUVJInvestigation.ipynb
@@ -21,7 +21,8 @@
     "import matplotlib.path as mpath\n",
     "import seaborn as sns\n",
     "import os\n",
-    "from astropy.io import fits"
+    "from astropy.io import fits\n",
+    "import random"
    ]
   },
   {
@@ -689,7 +690,15 @@
     "    selected_id = selected_df.sample(1)['id'].values[0]\n",
     "    \n",
     "    # This is where we want to make a selection on the UVJ space\n",
-    "    return selected_id"
+    "    return selected_id\n",
+    "\n",
+    "\n",
+    "# Function to get a random ID that is not already in the list\n",
+    "def get_unique_id(df, reigon, id_list):\n",
+    "    while True:\n",
+    "        random_id = get_uvj_id(df, reigon)\n",
+    "        if random_id not in id_list:\n",
+    "            return random_id"
    ]
   },
   {
@@ -723,18 +732,25 @@
     "        # If this is the case, we should set n to the smallest number of galaxies in a reigon\n",
     "        n = min([df['GalaxyType'].value_counts()[0], df['GalaxyType'].value_counts()[1], df['GalaxyType'].value_counts()[2]])\n",
     "    \n",
-    "    # n is the number of selections in reach reigon, we will select n id's from each reigon\n",
+    "        # Generate n random IDs for each condition\n",
     "    for i in range(n):\n",
-    "        sf_id = get_uvj_id(df, 'Star Forming')\n",
-    "        qsct_id = get_uvj_id(df, 'Quiescent')\n",
-    "        dust_id = get_uvj_id(df, 'Dusty')\n",
-    "        \n",
-    "        # Check to see if the id's are in the id_list\n",
-    "        while\n",
-    "        \n",
+    "        sf_id = get_unique_id(df, 'Star Forming', star_forming_ids)\n",
+    "        qsct_id = get_unique_id(df, 'Quiescent', quiescent_ids)\n",
+    "        dust_id = get_unique_id(df, 'Dusty', dusty_ids)\n",
+    "\n",
+    "        # Append unique IDs to the lists\n",
     "        star_forming_ids.append(sf_id)\n",
     "        quiescent_ids.append(qsct_id)\n",
     "        dusty_ids.append(dust_id)\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "    \n",
     "    \n",
     "    selected_ids = pd.DataFrame({'Star-forming ID': star_forming_ids, 'Quiescent ID': quiescent_ids, 'Dusty ID': dusty_ids})\n",
