--- a/ZFourgeUVJInvestigation.ipynb
+++ b/ZFourgeUVJInvestigation.ipynb
@@ -981,160 +981,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>recno</th>\n",
-       "      <th>id</th>\n",
-       "      <th>xpos</th>\n",
-       "      <th>ypos</th>\n",
-       "      <th>RAJ2000</th>\n",
-       "      <th>DEJ2000</th>\n",
-       "      <th>SE</th>\n",
-       "      <th>isoArea</th>\n",
-       "      <th>FKsap</th>\n",
-       "      <th>e_FKsap</th>\n",
-       "      <th>...</th>\n",
-       "      <th>lssfr</th>\n",
-       "      <th>lmass</th>\n",
-       "      <th>field</th>\n",
-       "      <th>mag_U</th>\n",
-       "      <th>mag_V</th>\n",
-       "      <th>mag_J</th>\n",
-       "      <th>e_mag_U</th>\n",
-       "      <th>e_mag_V</th>\n",
-       "      <th>e_mag_J</th>\n",
-       "      <th>GalaxyType</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>13637</th>\n",
-       "      <td>13592</td>\n",
-       "      <td>13592</td>\n",
-       "      <td>2683.995</td>\n",
-       "      <td>3747.007</td>\n",
-       "      <td>53.165836</td>\n",
-       "      <td>-27.819061</td>\n",
-       "      <td>3</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>2.06825</td>\n",
-       "      <td>0.05002</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9.27</td>\n",
-       "      <td>CDFS_</td>\n",
-       "      <td>27.458378</td>\n",
-       "      <td>25.795593</td>\n",
-       "      <td>24.538094</td>\n",
-       "      <td>30.659772</td>\n",
-       "      <td>30.172331</td>\n",
-       "      <td>28.366445</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15262</th>\n",
-       "      <td>15181</td>\n",
-       "      <td>15181</td>\n",
-       "      <td>5120.605</td>\n",
-       "      <td>4090.014</td>\n",
-       "      <td>53.051052</td>\n",
-       "      <td>-27.804758</td>\n",
-       "      <td>3</td>\n",
-       "      <td>116.0</td>\n",
-       "      <td>2.55293</td>\n",
-       "      <td>0.07023</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-8.80</td>\n",
-       "      <td>9.94</td>\n",
-       "      <td>CDFS_</td>\n",
-       "      <td>25.734215</td>\n",
-       "      <td>24.701819</td>\n",
-       "      <td>23.278452</td>\n",
-       "      <td>29.259006</td>\n",
-       "      <td>29.709245</td>\n",
-       "      <td>27.977003</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27026</th>\n",
-       "      <td>26789</td>\n",
-       "      <td>26789</td>\n",
-       "      <td>6293.972</td>\n",
-       "      <td>6385.264</td>\n",
-       "      <td>52.995892</td>\n",
-       "      <td>-27.709084</td>\n",
-       "      <td>0</td>\n",
-       "      <td>134.0</td>\n",
-       "      <td>3.22805</td>\n",
-       "      <td>0.15226</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-9.46</td>\n",
-       "      <td>8.80</td>\n",
-       "      <td>CDFS_</td>\n",
-       "      <td>25.180456</td>\n",
-       "      <td>24.402415</td>\n",
-       "      <td>24.034814</td>\n",
-       "      <td>29.491371</td>\n",
-       "      <td>30.624171</td>\n",
-       "      <td>30.589700</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3 rows × 176 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       recno     id      xpos      ypos    RAJ2000    DEJ2000  SE  isoArea  \\\n",
-       "13637  13592  13592  2683.995  3747.007  53.165836 -27.819061   3     35.0   \n",
-       "15262  15181  15181  5120.605  4090.014  53.051052 -27.804758   3    116.0   \n",
-       "27026  26789  26789  6293.972  6385.264  52.995892 -27.709084   0    134.0   \n",
-       "\n",
-       "         FKsap  e_FKsap  ...  lssfr  lmass  field      mag_U      mag_V  \\\n",
-       "13637  2.06825  0.05002  ...    NaN   9.27  CDFS_  27.458378  25.795593   \n",
-       "15262  2.55293  0.07023  ...  -8.80   9.94  CDFS_  25.734215  24.701819   \n",
-       "27026  3.22805  0.15226  ...  -9.46   8.80  CDFS_  25.180456  24.402415   \n",
-       "\n",
-       "           mag_J    e_mag_U    e_mag_V    e_mag_J  GalaxyType  \n",
-       "13637  24.538094  30.659772  30.172331  28.366445         0.0  \n",
-       "15262  23.278452  29.259006  29.709245  27.977003         2.0  \n",
-       "27026  24.034814  29.491371  30.624171  30.589700         1.0  \n",
-       "\n",
-       "[3 rows x 176 columns]"
-      ]
-     },
-     "execution_count": 230,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'selected_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-861e8164ac94>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m# that contains all the relevant information\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mselected_df\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'selected_df' is not defined"
+     ]
     }
    ],
    "source": [
     "# Using the ID's from the above dataframe, we can create a dataframe from the original cdfs dataframe\n",
     "# that contains all the relevant information\n",
     "\n",
-    "selected_df"
+    "selected_df\n"
    ]
   },
   {
@@ -1880,7 +1746,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
