Updated some UVJ sorting code

--- a/ZFourgeUVJInvestigation.ipynb
+++ b/ZFourgeUVJInvestigation.ipynb
@@ -48,12 +48,12 @@
     "    eazy_file = os.path.join(folder, zfourge_fields[fieldname][2])\n",
     "    sfr_file = os.path.join(folder, zfourge_fields[fieldname][3])\n",
     "    \n",
-    "    # Open the fits files\n",
+    "    # Open the fits files <- needs to be different for CAT vs Fits files\n",
     "    catalog_fits = fits.open(catalog_file)\n",
     "    rest_fits = fits.open(rest_file)\n",
     "    sfr_fits = fits.open(sfr_file)\n",
     "    \n",
-    "    # Read the files into DataFrames\n",
+    "    # Read the files into DataFrames <- needs to be different for CAT vs Fits files\n",
     "    df = pd.DataFrame(np.array(catalog_fits[1].data).byteswap().newbyteorder()) \n",
     "    rest_df = pd.DataFrame(np.array(rest_fits[1].data).byteswap().newbyteorder())\n",
     "    eazy_df = pd.DataFrame(np.array(fits.open(eazy_file)[1].data).byteswap().newbyteorder())\n",
@@ -129,7 +129,6 @@
     "\n",
     "\n",
     "# Propogate errors from each of the fluxes to the UVJ diagram to a ratio of sigma\n",
-    "\n",
     "df = df[(df['U'] >= sigma * df['eU']) & (df['V'] >= sigma * df['eV']) & (df['J'] >= sigma * df['eJ'])].copy()"
    ]
   },
@@ -187,8 +186,8 @@
    "source": [
     "def categorise_uvj(df):\n",
     "    id = df['id']\n",
-    "    x = df['mag_V'] - df['mag_J']\n",
-    "    y = df['mag_U'] - df['mag_V']\n",
+    "    x = df['mag_V'] - df['mag_J'] # VJ Colours \n",
+    "    y = df['mag_U'] - df['mag_V'] # UV Colours\n",
     "\n",
     "    # Plot the UVJ diagram\n",
     "    plt.figure(figsize=(10, 10))\n",
@@ -249,11 +248,11 @@
     "    \n",
     "    \n",
     "    \n",
-    "    print(selected_df)\n",
+    "    #print(selected_df)\n",
     "    #print(unselected_df)\n",
     "    \n",
     "    # Now we can easily select the quiescent galaxies and set the galaxy type to quiescent - 0 or starforming 1.\n",
-    "    print(selected_df)\n",
+    "    #print(selected_df)\n",
     "    selected_ids = selected_df['id']\n",
     "    df.loc[df['id'].isin(selected_ids), 'GalaxyType'] = 0 # This is what makes the selection happen\n",
     "    \n",
